--- a/3-Forms/taak03/invoer.html
+++ b/3-Forms/taak03/invoer.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <form action="mijnmuziek.php" method="get">
-        Artiest
-        <br>
-        <input type="text" name="artiest"><br>
-        Titel
-        <br>
-        <input type="text" name="titel"><br>
-        Jaar van uitkomst
-        <br>
-        <input type="text" name="Jaarvanuitkomst"><br>
-        Muzieksoort
-        <br>
-        <input type="text" name="Muzieksoort"><br>
-
-        <input type="submit" name="submit" value="verstuur"><br>
-    <title>Invoert</title>
+    <title>Invoer</title>
 </head>
+
 <body>
-    
+    Artiest
+    <p>
+    <input type="text" name="artiest"><br>
+    Titel
+    <p>
+    <input type="text" name="titel"><br>
+    Jaar van uitkomst
+    <p>
+    <input type="text" name="Jaarvanuitkomst"><p> </p>
+    Muzieksoort
+    <P>
+    <input type="text" name="Muzieksoort"><br>
+    <p>
+    <input type="submit" name="submit" value="verstuur"><br>
+
 </body>
 </html>
