--- a/3-Forms/taak02/invoer.html
+++ b/3-Forms/taak02/invoer.html
@@ -9,25 +9,25 @@
 <body>
 
 <form action="mijngegevens.php" method="post">
-     Voornaam <br>
-    <input type="text" name="Voornaam"><br>
-     Achternaam <br>
-    <input type="text" name="Achternaam"><br>
-     Klas <br>
-    <input type="text" name="Klas"><br>
-     Leeftijd <br>
-    <input type="text" name="Leeftijd"><br>
-     Adres <br>
-    <input type="text" name="Adres"><br>
-     Plaatsnaam <br>
-    <input type="text" name="Plaatsnaam"><br>
-     Favoriete muziekband <br>
-    <input type="text" name="Favorietemuziekband"><br>
+     Voornaam <p>
+    <input type="text" name="Voornaam"><p>
+     Achternaam <p>
+    <input type="text" name="Achternaam"><p>
+     Klas <p>
+    <input type="text" name="Klas"><p>
+     Leeftijd <p>
+    <input type="text" name="Leeftijd"><p>
+     Adres <p>
+    <input type="text" name="Adres"><p>
+     Plaatsnaam <p>
+    <input type="text" name="Plaatsnaam"><p>
+     Favoriete muziekband <p>
+    <input type="text" name="Favorietemuziekband"><p>
 
     <input type="radio" name="gender" value="Vrouw"> Vrouw</input>
     <input type="radio" name="gender" value="Man"> Man</input>
-<br>
-<br>
+<p>
+<p>
     <select name="lievelingskleur"> 
         <option value="blue">Blauw</option>
         <option value="green">Groen </option>
@@ -35,9 +35,9 @@
         <option value="yellow">Geel</option>
         <option value="brown">Bruin</option>
     </select>
-<br>
-<br>
-    <input type="submit" name="submit" value="verstuur"><br>
+<p>
+<p>
+    <input type="submit" name="submit" value="verstuur"><p>
  </form>
 
 </body>
